@@ -1,6 +1,12 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+*portage-1.9.0 (16 Apr 2002)
+
+  16 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: fetching
+  should now try *all* alternate download locations, closing bug #1544. 
+  Yay!
+  
   15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: emerge: "emerge R" now
   works correctly, closing bug #1094.
   
